# FTCN

./: .gitignore  CLAUDE.md  devenv.nix  pyproject.toml  test_on_raw_video.py
model/classifier/: i3d_temporal_var_fix_dropout_tt_cfg.py
test_tools/: common.py
test_tools/ct/detection/: alignment.py  utils.py
test_tools/ct/face_alignment/: predictor.py
test_tools/ct/tracking/: sort.py
